--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "devDependencies": {
-    "@types/jest": "^28.1.1"
+    "@types/jest": "^28.1.1",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.3"
   },
   "scripts": {
+    "compile": "tsc",
     "test": "jest"
   },
   "dependencies": {
-    "jest": "^28.1.1"
+    "ts-node": "^10.8.1"
   }
 }
